Fix multiple_resources samples to use initialized flag

--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/multipleResources/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/multipleResources/index.html
@@ -61,6 +61,10 @@
   <br>
   <br>
 
+  <div hidden id="pca-initialized">
+    false
+  </div>
+
   <!-- importing bootstrap.js and supporting js libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
