Throw when initialize has not been called (#6233)
This PR:

- Replaces `BrowserUtils.blockNativeBrokerCalledBeforeInitialize` with
`BrowserUtils.blockCallsBeforeInitialize` since now `initialize` call is
required regardless of whether `allowNativeBroker` is enabled
- Calls `BrowserUtils.blockCallsBeforeInitialize` in all public APIs
related to token acquisition and accounts
- Replaces `BrowserAuthError.createNativeBrokerCalledBeforeInitialize()`
with `BrowserAuthError.createUninitializedPublicClientApplication()` and
updates error message
- Updates browser spec files to match new behavior

--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/onPageLoad/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/onPageLoad/index.html
@@ -59,6 +59,9 @@
   </div>
   <br>
   <br>
+  <div hidden id="pca-initialized">
+    false
+  </div>
 
   <!-- importing bootstrap.js and supporting js libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
