--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/multi-tenant/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/multi-tenant/index.html
@@ -35,7 +35,7 @@
         <div id="profile-div"></div>
         <br>
         <br>
-        <button class="btn btn-primary" id="seeProfile" onclick="seeProfile()">See Profile</button>
+        <button class="btn btn-primary" id="seeProfile" onclick="seeProfileHome()">See Profile</button>
         <br>
         <br>
         <button class="btn btn-primary" id="seeProfileGuest" onclick="seeProfileGuest()">See Guest Tenant Profile</button>
