--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/facebook-sample/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/facebook-sample/index.html
@@ -29,7 +29,7 @@
     </div>
   </nav>
   <br>
-  <h5 class="card-header text-center">Vanilla JavaScript SPA calling Vanilla Graph API with MSAL.JS</h5>
+  <h5 class="card-header text-center">Vanilla JavaScript SPA calling Facebook Graph API with MSAL.JS</h5>
   <br>
   <div class="row" style="margin:auto">
     <div id="card-div" class="col-md-3" style="display:none">
