--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/pop/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/pop/index.html
@@ -45,6 +45,9 @@
           <button class="btn btn-primary" id="popToken" onclick="fetchPopToken()">Acquire PoP Token</button>
           <br>
           <br>
+          <button class="btn btn-primary" id="popCnfToken" onclick="fetchPopTokenWithCnf()">Acquire PoP Token when cnf is provided</button>
+          <br>
+          <br>
           <button class="btn btn-primary" id="popRequest" onclick="popRequest()">Use PoP Token</button>
         </div>
       </div>
