--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/app/customizable-e2e-test/index.html
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/app/customizable-e2e-test/index.html
@@ -48,6 +48,10 @@
           <br>
           <button class="btn btn-primary" id="acquireTokenSilent"
             onclick="getTokenSilently()">acquireTokenSilent</button>
+            <br>
+            <br>
+            <button class="btn btn-primary" id="acquireGuestToken"
+            onclick="getGuestTokenSilently()">acquireGuestToken</button>
         </div>
       </div>
     </div>
