--- a/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
@@ -4,3 +4,5 @@
     For more information, please follow this link: 
     https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-browser/docs/login-user.md#redirecturi-considerations 
 -->
+<script src="/msal-browser.min.js"></script>
+<script src="./authRedirect.js"></script>
