back to reg js script tags

--- a/1-Authentication/0-sign-in-vanillajs/App/public/index.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/index.html
@@ -18,12 +18,12 @@
 
 <body>
     <!-- importing app scripts (load order is important) -->
-    <script type="module" src="./authConfig.js"></script>
-    <script type="module" src="./ui.js"></script>
-    <script type="module" src="./claimUtils.js"></script>
+    <script type="text/javascript" src="./authConfig.js"></script>
+    <script type="text/javascript" src="./ui.js"></script>
+    <script type="text/javascript" src="./claimUtils.js"></script>
     <!-- <script type="text/javascript" src="./authRedirect.js"></script> -->
     <!-- uncomment the above line and comment the line below if you would like to use the redirect flow -->
-    <script type="module" src="./authRedirect.js"></script>
+    <script type="text/javascript" src="./authRedirect.js"></script>
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary navbarStyle">
         <a class="navbar-brand" href="/">Microsoft identity platform</a>
