--- a/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
@@ -5,4 +5,4 @@
     https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-browser/docs/login-user.md#redirecturi-considerations 
 -->
 <script src="/msal-browser.min.js"></script>
-<script type="module" src="./authRedirect.js"></script>
+<script type="text/javascript" src="./authRedirect.js"></script>
