--- a/1-Authentication/0-sign-in-vanillajs/App/public/index.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/index.html
@@ -60,9 +60,9 @@
     <script type="text/javascript" src="./authConfig.js"></script>
     <script type="text/javascript" src="./ui.js"></script>
     <script type="text/javascript" src="./claimUtils.js"></script>
-    <!-- <script type="text/javascript" src="./authRedirect.js"></script> -->
+    <script type="text/javascript" src="./authRedirect.js"></script>
     <!-- uncomment the above line and comment the line below if you would like to use the popup flow -->
-    <script type="text/javascript" src="./authPopup.js"></script>
+    <!-- <script type="text/javascript" src="./authPopup.js"></script> -->
 </body>
 
 </html>
